[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-debug-replay"
version = "0.1.0"
description = "Step-through replay of JSONL agent run traces"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["llm", "agent", "debug", "replay", "trace", "jsonl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]

[tool.setuptools.packages.find]
where = ["src"]
